# chaos-backend-service

./: $PROFILE.txt  .gitignore  Cargo.toml  DEVELOPMENT.md  MIGRATION_SUMMARY.md  Makefile  README.md  REORGANIZATION_SUMMARY.md  cleanup-old-structure.ps1  docker-compose.yml  env.example  fix-axum-templates.ps1  fix_init_functions.ps1  fix_remaining_errors.ps1  justfile  rust-analyzer.toml  rust-toolchain.toml
chaos-backend/: Cargo.toml  README.md  check_mongodb_data.js  check_mongodb_data.py  check_mongodb_data.rs  check_mongodb_simple.py  run_test.sh  test_mongodb.bat  test_with_backtrace.bat  update_flags.py
chaos-backend/configs/: actor_core_config.yaml  default_resources.yaml  dimensions.yaml  environment_config.yaml  file_config.yaml  integration_test_config.yaml  minimal_test_config.yaml  observability_config.yaml  production_config.yaml  provider_config.yaml  regen_types.yaml  registry_loader_config.yaml  system_load_config.yaml  test_config.yaml
chaos-backend/src/server/: actor_manager.rs  config_sync.rs  game_server.rs  performance_monitor.rs
crates/actor-core/: .pre-commit-config.yaml  API_REFERENCE.md  CHANGELOG.md  Cargo.toml  DEPRECATION_TIMELINE.md  MIGRATION_GUIDE.md  Makefile  PERFORMANCE_ANALYSIS.md  README.md  README_REFACTORED.md  REVIEW_PROGRESS.md  clippy.toml  deny.toml  rustfmt.toml
crates/actor-core-hierarchical/: Cargo.toml  README.md
crates/actor-core-hierarchical/docs/: IMPLEMENTATION_GUIDE.md  QUICK_REFERENCE.md  ROADMAP.md
crates/actor-core-hierarchical/examples/: basic_actor.rs  five_elements_actor.rs  minimal_test.rs  simple_five_elements.rs  single_element_actor.rs  step_by_step.rs
crates/actor-core-hierarchical/src/: lib.rs
crates/actor-core-hierarchical/tests/: actor_factory_tests.rs  adapters_tests.rs  elemental_adapter_tests.rs  global_aggregator_tests.rs  hierarchical_actor_tests.rs
crates/actor-core/benches/: actor_benchmarks.rs  bucket_processor_benchmarks.rs  criterion_config.rs  main.rs  micro_optimizations.rs  registry_loader_benchmarks.rs  simple_benchmarks.rs
crates/actor-core/configs/: actor_core_config.yaml  bucket_display_names.yaml  bucket_priorities.yaml  cache_keys.yaml  cap_layers.yaml  cap_mode_display_names.yaml  clamp_ranges.yaml  default_categories.yaml  deprecation_config.yaml  deprecations.yaml  example_config.yaml  memory_pool_config.yaml  mongodb_config.yaml  optimized_registry_config.yaml  performance_thresholds.yaml  rollback_plans.yaml  system_ids.yaml  timeouts.yaml  validation_rules.yaml
crates/actor-core/docs/: API.md  DESIGN.md  MIGRATION.md  MONGODB_CONFIG.md  PERFORMANCE.md  PLUGIN_ARCHITECTURE_FOR_GOD_CLASS.md  PLUGIN_ARCHITECTURE_SUMMARY.md
crates/actor-core/examples/: basic_usage.rs  builder_pattern_example.rs  complete_refactor_example.rs  config_usage_example.rs  configuration_example.rs  configuration_hub_example.rs  correct_performance_comparison.rs  deprecation_example.rs  detailed_performance_analysis.rs  exhaustion_cli.rs  exhaustion_system_example.rs  magic_resource_config.yaml  mongodb_basic_test.rs  mongodb_config_demo.rs  mongodb_simple_test.rs  observability_example.rs  observability_integration.rs  performance_workflow_example.rs  production_condition_configs.yaml  redis_connection_example.rs  resource_manager_example.rs  rpg_resource_config.yaml  rpg_resource_manager_refactored.rs  runtime_registry_example.rs  simple_condition_integration.rs  subsystem_example.rs  validation_example.rs
crates/actor-core/scripts/: validate_configs.py
crates/actor-core/src/: api_stability.rs  bucket_processor.rs  cache.rs  caps_provider.rs  config.rs  constants.rs  enums.rs  error.rs  inheritable.rs  integration_tests.rs  interfaces.rs  (+10 more)
crates/api/: Cargo.toml
crates/condition-core/: ARCHITECTURE_REFACTOR.md  Cargo.toml  PERFORMANCE_REPORT.md  README.md  TEST_SUMMARY.md
crates/element-core/: Cargo.toml  README.md
crates/generator-core/: Cargo.toml
crates/item-core/: Cargo.toml
crates/job-core/: Cargo.toml
crates/shared/: Cargo.toml
crates/world-core/: Cargo.toml
scripts/: MONITORING_SETUP_GUIDE.md  README.md  build_services.py  check_environment.py  check_services.bat  check_services.ps1  check_services.py  check_services_simple.bat  clean_examples.py  clean_tests.py  clear_mongodb_runtime_flags.ps1  clear_runtime_flags.rs  cms_service_manager.py  copy_services.py  deploy_services.py  dev.bat  dev.ps1  fix_cms_service.py  generate_test_data.py  install_nssm.bat  install_nssm.ps1  install_nssm_choco.bat  install_services.bat  install_services.py  manual_nssm_install.md  monitoring_service_manager.py  pyproject.toml  quick_monitoring_setup.py  reinstall_cms_service.py  remove_tests_from_src.ps1  reset_grafana_password.py  restart_chaos_backend.bat  service_manager.js  service_manager.py  service_utils.py  setup_chaos_world_services.bat  setup_complete_monitoring.py  setup_grafana_manual.py  setup_monitoring.py  setup_windows_services.bat  (+16 more)
services/: Cargo.toml
services/actor-service/: Cargo.toml
services/analytics-service/: Cargo.toml  Dockerfile  README.md
services/anti-cheat-service/: Cargo.toml  Dockerfile  README.md
services/api-gateway/: Cargo.toml  Dockerfile  README.md  env.example
services/chaos-backend/: Cargo.toml  Dockerfile  README.md
services/chat-service/: Cargo.toml  Dockerfile  README.md
services/combat-service/: Cargo.toml
services/content-management-service/: Cargo.toml  Dockerfile  README.md  env.example  test_api.ps1
services/event-service/: Cargo.toml  Dockerfile  README.md
services/guild-service/: Cargo.toml  Dockerfile  README.md
services/inventory-service/: Cargo.toml  Dockerfile  README.md
services/matchmaking-service/: Cargo.toml  Dockerfile  README.md
services/notification-service/: Cargo.toml  Dockerfile  README.md
services/payment-service/: Cargo.toml  Dockerfile  README.md
services/user-management/: Cargo.toml  Dockerfile  README.md
services/world-service/: Cargo.toml  Dockerfile  README.md
tools/admin-cli/: Cargo.toml
tools/data-gen/: Cargo.toml
tools/load-test/: Cargo.toml
tools/migrate/: Cargo.toml
(+910 files in other folders)
