[workspace]
members = [
    "crates/actor-core",
    "crates/shared",
    "services/api-gateway",
    "services/user-management",
    "services/inventory-service", 
    "services/chat-service",
    "services/guild-service",
    "services/world-service",
    "services/matchmaking-service",
    "services/event-service",
    "services/content-management-service",
    "services/notification-service",
    "services/payment-service",
    "services/anti-cheat-service",
    "services/analytics-service",
    "services/chaos-backend",
    "crates/element-core",
    "crates/actor-core-hierarchical"]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Chaos World Team"]
description = "Chaos World MMORPG Backend Services"
license = "MIT"
repository = "https://github.com/chaos-world/chaos-backend-service"

[workspace.dependencies]
tokio = { version = "1.0", features = ["full"] }
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
clap = { version = "4.0", features = ["derive"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
mongodb = "2.8"
bson = "2.8"
redis = { version = "0.24", features = ["aio", "tokio-comp"] }
kafka = "0.10"
async-trait = "0.1"
futures = "0.3"
parking_lot = "0.12"
dashmap = "5.5"
crossbeam = "0.8"
moka = "0.12"
memmap2 = "0.9"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid"] }
criterion = "0.5"
proptest = "1.4"
tokio-test = "0.4"
tempfile = "3.8"
base64 = "0.21"
hex = "0.4"
sha2 = "0.10"
hmac = "0.12"
rand = "0.8"
regex = "1.10"
url = "2.4"
reqwest = { version = "0.11", features = ["json"] }
hyper = "1.0"
serde_yaml = "0.9"
jsonwebtoken = "9.2"
oauth2 = "4.4"
consul = "0.4"
k8s-openapi = "0.20"
tonic = "0.10"
prost = "0.12"
prometheus = "0.13"
ring = "0.17"
time = "0.3"
dotenv = "0.15"
config = "0.14"
validator = "0.18"
flate2 = "1.0"
jwt = "0.16"
governor = "0.6"
