[package]
name = "services"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Business logic and service orchestration for Chaos World MMORPG backend"

[dependencies]
# Workspace dependencies
shared = { path = "../shared" }
actor-core = { path = "../actor-core" }
combat-core = { path = "../combat-core" }
leveling-core = { path = "../leveling-core" }
race-core = { path = "../race-core" }
world-core = { path = "../world-core" }
event-core = { path = "../event-core" }
item-core = { path = "../item-core" }
job-core = { path = "../job-core" }
generator-core = { path = "../generator-core" }

# Core dependencies
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }

# Concurrency
dashmap = { workspace = true }

# Database
sqlx = { workspace = true }
redis = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
proptest = { workspace = true }
