[package]
name = "actor-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Character stat aggregation and management system for Chaos World MMORPG"
rust-version = "1.89"

[features]
default = []
extra_buckets = []

[dependencies]
# Workspace dependencies
shared = { path = "../shared" }

# Core dependencies
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { workspace = true }
chrono = { workspace = true }
anyhow = "1"
thiserror = "1"
tracing = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }

# Concurrency
dashmap = { workspace = true }
crossbeam = { workspace = true }
parking_lot = { workspace = true }

# Caching
moka = { workspace = true }
memmap2 = { workspace = true }

# Database
sqlx = { workspace = true }
redis = { workspace = true }
mongodb = "2.8"
bson = "2.8"

# Performance and SIMD
crc32fast = "1.3"
seahash = "4.1"
num_cpus = "1.16"
rand = "0.8"
serde_yaml = "0.9"

# CLI
clap = { version = "4", features = ["derive"] }
tracing-subscriber = "0.3"

[dev-dependencies]
tokio = { workspace = true }
proptest = { workspace = true }
criterion = { workspace = true }
tempfile = "3"

# CI and quality tools
