[package]
name = "actor-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Character stat aggregation and management system for Chaos World MMORPG"
rust-version = "1.89"

[features]
default = []
extra_buckets = []

# Heavy dependency features
moka-cache = ["moka"]
memory-mapped = ["memmap2"]
redis-cache = ["redis"]
mongodb-storage = ["mongodb", "bson"]
sqlx-database = ["sqlx"]
cli-tools = ["clap", "tracing-subscriber"]

# All heavy features (for development/testing)
heavy-deps = ["moka-cache", "memory-mapped", "redis-cache", "mongodb-storage", "sqlx-database", "cli-tools"]

[dependencies]
# Workspace dependencies
shared = { path = "../shared" }

# Core dependencies
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { workspace = true }
chrono = { workspace = true }
anyhow = "1"
thiserror = "1"
tracing = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
futures = "0.3"

# Concurrency
dashmap = { workspace = true }
crossbeam = { workspace = true }
parking_lot = { workspace = true }

# Caching
moka = { workspace = true, optional = true }
memmap2 = { workspace = true, optional = true }

# Database
sqlx = { workspace = true, optional = true }
redis = { workspace = true, optional = true }
mongodb = { version = "2.8", optional = true }
bson = { version = "2.8", optional = true }

# Performance and SIMD
crc32fast = "1.3"
seahash = "4.1"
num_cpus = "1.16"
rand = "0.8"
serde_yaml = "0.9"

# Micro-optimizations
smallvec = "1.11"
fxhash = "0.2"
ahash = "0.8"
rustc-hash = "1.1"

# CLI
clap = { version = "4", features = ["derive"], optional = true }
tracing-subscriber = { version = "0.3", optional = true }

[dev-dependencies]
tokio = { workspace = true }
proptest = { workspace = true }
criterion = { workspace = true }
tempfile = "3"

# CI and quality tools
