[package]
name = "actor-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Character stat aggregation and management system for Chaos World MMORPG"
rust-version = "1.89"

[features]
default = ["redis-cache"]
extra_buckets = []
inheritable = []

# Heavy dependency features
moka-cache = ["moka"]
memory-mapped = ["memmap2"]
redis-cache = ["redis"]
mongodb-storage = ["mongodb", "bson"]
sqlx-database = ["sqlx"]
cli-tools = ["clap", "tracing-subscriber"]

# All heavy features (for development/testing)
heavy-deps = ["moka-cache", "memory-mapped", "redis-cache", "mongodb-storage", "sqlx-database", "cli-tools"]

[dependencies]
# Workspace dependencies
shared = { path = "../shared" }
condition-core = { path = "../condition-core" }

# Core dependencies
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { workspace = true }
chrono = { workspace = true }
anyhow = "1"
thiserror = "1"
tracing = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
futures = "0.3"

# Concurrency
dashmap = { workspace = true }
crossbeam = { workspace = true }
parking_lot = { workspace = true }

# Caching
moka = { workspace = true, optional = true }
memmap2 = { workspace = true, optional = true }

# Database
sqlx = { workspace = true, optional = true }
redis = { workspace = true, optional = true }
mongodb = { version = "2.8", optional = true }
bson = { version = "2.8", optional = true }

# Performance and SIMD
crc32fast = "1.3"
seahash = "4.1"
num_cpus = "1.16"
rand = "0.8"
serde_yaml = "0.9"
toml = "0.8"

# Micro-optimizations
smallvec = "1.11"
fxhash = "0.2"
ahash = "0.8"
rustc-hash = "1.1"

# CLI
clap = { version = "4", features = ["derive"], optional = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"], optional = true }

[dev-dependencies]
tokio = { workspace = true }
proptest = { workspace = true }
criterion = { workspace = true }
tempfile = "3"

# CI and quality tools

# Benchmarks configuration
[[bench]]
name = "actor_benchmarks"
harness = false
path = "benches/actor_benchmarks.rs"

[[bench]]
name = "bucket_processor_benchmarks"
harness = false
path = "benches/bucket_processor_benchmarks.rs"

[[bench]]
name = "registry_loader_benchmarks"
harness = false
path = "benches/registry_loader_benchmarks.rs"

[[bench]]
name = "simple_benchmarks"
harness = false
path = "benches/simple_benchmarks.rs"

[[bench]]
name = "micro_optimizations"
harness = false
path = "benches/micro_optimizations.rs"

# Examples configuration
[[example]]
name = "basic_usage"
path = "examples/basic_usage.rs"

[[example]]
name = "configuration_example"
path = "examples/configuration_example.rs"

[[example]]
name = "mongodb_basic_test"
path = "examples/mongodb_basic_test.rs"

# Tests configuration
[[test]]
name = "actor_tests"
path = "tests/actor_tests.rs"

[[test]]
name = "aggregation_tests"
path = "tests/aggregation_tests.rs"

[[test]]
name = "aggregator_optimized_basic"
path = "tests/aggregator_optimized_basic.rs"

[[test]]
name = "builder_tests"
path = "tests/builder_tests.rs"

[[test]]
name = "cache_tests"
path = "tests/cache_tests.rs"

[[test]]
name = "caps_tests"
path = "tests/caps_tests.rs"

[[test]]
name = "config_tests"
path = "tests/config_tests.rs"

[[test]]
name = "config_validation_tests"
path = "tests/config_validation_tests.rs"

[[test]]
name = "edge_case_tests"
path = "tests/edge_case_tests.rs"

[[test]]
name = "integration_tests"
path = "tests/integration_tests.rs"

[[test]]
name = "interfaces_tests"
path = "tests/interfaces_tests.rs"

[[test]]
name = "operator_mode_tests"
path = "tests/operator_mode_tests.rs"

[[test]]
name = "runtime_registry_tests"
path = "tests/runtime_registry_tests.rs"

[[test]]
name = "service_tests"
path = "tests/service_tests.rs"