[package]
name = "shared"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Shared types, utilities, and common functionality for Chaos World MMORPG backend"

[dependencies]
# Core dependencies
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

# Utilities
regex = { workspace = true }
url = { workspace = true }
base64 = { workspace = true }

# Database
sqlx = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
proptest = { workspace = true }
