[package]
name = "chaos-backend"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Main Chaos World MMORPG backend service"

[[bin]]
name = "chaos-backend"
path = "src/main.rs"

[dependencies]
# Workspace dependencies
shared = { path = "../../crates/shared" }
actor-core = { path = "../../crates/actor-core" }
combat-core = { path = "../../crates/combat-core" }
leveling-core = { path = "../../crates/leveling-core" }
race-core = { path = "../../crates/race-core" }
world-core = { path = "../../crates/world-core" }
event-core = { path = "../../crates/event-core" }
item-core = { path = "../../crates/item-core" }
job-core = { path = "../../crates/job-core" }
generator-core = { path = "../../crates/generator-core" }
api = { path = "../../crates/api" }

# Core dependencies
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
config = { workspace = true }

# Database
sqlx = { workspace = true }
redis = { workspace = true }

# Web framework
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }

# gRPC
tonic = { workspace = true }

# Monitoring
prometheus = { workspace = true }
