[package]
name = "chaos-backend"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "chaos-backend"
path = "src/main.rs"

[[bin]]
name = "check_mongodb"
path = "src/check_mongodb.rs"

[dependencies]
actor-core = { path = "../../crates/actor-core", features = ["mongodb-storage"] }
shared = { path = "../../crates/shared" }
tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1"
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
parking_lot = "0.12"
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.0", features = ["derive"] }
mongodb = "2.8"
bson = "2.8"

[features]
mongodb-storage = ["actor-core/mongodb-storage"]
