[package]
name = "content-management-service"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "content-management-service"
path = "src/main.rs"

[dependencies]
tokio = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
clap = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
mongodb = { workspace = true }
bson = { workspace = true }
redis = { workspace = true }

# Service-specific dependencies
actor-core = { path = "../../crates/actor-core" }
shared = { path = "../../crates/shared" }

# Additional dependencies for admin login and monitoring
jsonwebtoken = "9.2"
argon2 = "0.5"
prometheus = "0.13"
tower-http = { workspace = true, features = ["cors", "trace"] }