[package]
name = "user-management"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "user-management"
path = "src/main.rs"

[dependencies]
tokio = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = "0.9"
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
clap = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
mongodb = { workspace = true }
bson = { workspace = true, features = ["uuid-0_8"] }
redis = { workspace = true }

# Service-specific dependencies
actor-core = { path = "../../crates/actor-core" }
shared = { path = "../../crates/shared" }

# Authentication and security
jsonwebtoken = "9.2"
argon2 = "0.5"
validator = { version = "0.18", features = ["derive"] }
lazy_static = "1.4"
rand = "0.8"
regex = "1.10"

# Metrics and monitoring
prometheus = "0.13"