[package]
name = "world-service"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "world-service"
path = "src/main.rs"

[dependencies]
tokio = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
mongodb = { workspace = true }
bson = { workspace = true }
redis = { workspace = true }

# Service-specific dependencies
actor-core = { path = "../../crates/actor-core" }
shared = { path = "../../crates/shared" }
