[package]
name = "migrate"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Database migration tool for Chaos World MMORPG backend"

[[bin]]
name = "migrate"
path = "src/main.rs"

[dependencies]
# Workspace dependencies
shared = { path = "../../crates/shared" }

# Core dependencies
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true, features = ["derive", "env"] }

# Database
sqlx = { workspace = true }

# Configuration
config = { workspace = true }
toml = { workspace = true }
